--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -61,8 +61,7 @@
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec2.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec2.js\"",
     "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\"",
-    "test:coverage": "node test/coverage/index.js",
-    "li": "cd ../../ && npm i && cd -"
+    "test:coverage": "node test/coverage/index.js"
   },
   "devDependencies": {
     "@applitools/dom-capture": "^7.1.2",
@@ -90,6 +89,7 @@
     "rollup-plugin-polyfill": "^3.0.0",
     "testcafe": "^1.5.0",
     "testcafe-browser-provider-browserstack": "^1.10.1",
+    "testcafe-browser-provider-saucelabs": "^1.8.0",
     "ua-parser-js": "^0.7.20",
     "url-polyfill": "^1.1.7",
     "whatwg-fetch": "^3.0.0",
