--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ node_js:
   - lts/*
 cache:
   yarn: true
+before_install:
+	- curl -o- -L https://yarnpkg.com/install.sh | bash
+	- export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - yarn install
 jobs:
