removed extranous use of npx from the `lint` script in each package

--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -39,7 +39,7 @@
     "mocha": "^6.2.2"
   },
   "scripts": {
-    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\""
   },
