--- a/packages/eyes-images-browser/package.json
+++ b/packages/eyes-images-browser/package.json
@@ -38,7 +38,7 @@
     "uglify-es": "^3.3.9"
   },
   "scripts": {
-    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "browserify": "browserify index.js > dist/eyes-images.browser.js",
     "uglify": "uglifyjs dist/eyes-images.browser.js > dist/eyes-images.browser.min.js",
     "build": "npm run browserify && npm run uglify"
