--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -41,7 +41,7 @@
     "protractor": "^6.0.0-beta"
   },
   "scripts": {
-    "lint": "npx eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "protractor test/protractor.conf.js",
     "test:it": "protractor test/protractor.conf.js"
   },
