--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 before_install:
   - 'curl -o- -L https://yarnpkg.com/install.sh | bash'
   - 'export PATH="$HOME/.yarn/bin:$PATH"'
+  - 'yarn -v'
 install:
   - yarn install
 jobs:
