--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -63,7 +63,8 @@
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec2.js\"",
     "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\"",
     "test:coverage": "node test/coverage/index.js",
-    "li": "cd ../../ && npm i && cd -"
+    "li": "cd ../../ && npm i && cd -",
+    "postpublish": "git push; git push --tags"
   },
   "devDependencies": {
     "@applitools/dom-capture": "^7.1.2",
