--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -43,7 +43,8 @@
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "protractor test/protractor.conf.js",
-    "test:it": "protractor test/protractor.conf.js"
+    "test:it": "protractor test/protractor.conf.js",
+    "postpublish": "git push; git push --tags"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
