--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -71,7 +71,8 @@
     "build:browser": "cd test/fixtures/test-app && npm i && npm run build",
     "test:browser": "mocha --no-timeouts 'test/browser/**/*.test.js'",
     "test": "npm run build:browser && npm run test:mocha",
-    "render": "node example/render.js"
+    "render": "node example/render.js",
+    "postpublish": "git push; git push --tags"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
