Squashed commit of [alt-build-tooling](https://github.com/applitools/eyes.sdk.javascript1/pull/110), which contains the following:
commit 838f94bff7dc5cb3d99341ea8145a55f670736ea
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Sun Jan 26 09:32:35 2020 +0200

    cleaned up ci script and removed the extranous `run` from yarn commands

commit 4da889fbe7aa7ed3aa82cea75b143c92f3808635
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Sun Jan 26 09:21:52 2020 +0200

    updated readme

commit 1185a14ab31630fdd482d0bc13ac1c55d273c1b1
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Wed Jan 22 10:49:12 2020 +0200

    added postpublish scripts

commit f301dd0fc5c3474dc5314d94b7a1ce555c631334
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Wed Jan 22 10:49:04 2020 +0200

    updated readme

commit 9d5b8065fa74276f273f425f85e918e42ab83c24
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Wed Jan 22 10:13:46 2020 +0200

    added `yarn -v` to before_install in the travis config [ci skip]

commit 435fb2ddd1e70f861039730259c971d8d50f8b99
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Wed Jan 22 10:09:22 2020 +0200

    refactored ci config generator

commit 766bdad6e381425a85168194c9b185d0b2fac1ff
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Wed Jan 22 09:49:57 2020 +0200

    removed extranous use of npx from the `lint` script in each package

commit adc10582f8f345ba4f6352d4720167c4c6ef49da
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Wed Jan 22 09:46:21 2020 +0200

    added .yarnrc files to each package with config to add a version prefix to tags and commit messages when running `yarn version` and `yarn publish`

commit f71ba1eaee6fc3a8b1f5808307180befdffe4991
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Tue Jan 21 20:41:21 2020 +0200

    fixed indentation in travis config

commit 5cb0bc8cf7ad62506a866e6eb3d5b82963205d53
Author: David Haeffner <dhaeffner@gmail.com>
Date:   Tue Jan 21 20:34:28 2020 +0200

    update yarn vers

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,14 @@
   },
   "extends": ["plugin:node/recommended"],
   "plugins": ["prettier", "mocha-no-only", "node"],
+  "ignorePatterns": [
+    "node_modules/",
+    "dist/",
+    "screenshots/",
+    "applitools.config.js",
+    "logs",
+    "tmp/"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "no-process-exit": "off",
