--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -54,6 +54,7 @@
     "testcafe"
   ],
   "scripts": {
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "build": "rollup -c ./build/rollup.config.js",
     "render": "node scripts/render.js",
     "test": "mocha --no-timeouts \"test/**/*.spec2.js\"",
@@ -61,7 +62,9 @@
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec2.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec2.js\"",
     "test:perf": "mocha --no-timeouts \"test/perf/**/*.spec.js\"",
-    "test:coverage": "node test/coverage/index.js"
+    "test:coverage": "node test/coverage/index.js",
+    "li": "cd ../../ && npm i && cd -",
+    "postpublish": "git push; git push --tags"
   },
   "devDependencies": {
     "@applitools/dom-capture": "^7.1.2",
