--- a/packages/dom-utils/package.json
+++ b/packages/dom-utils/package.json
@@ -34,8 +34,10 @@
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\""
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
+    "postpublish": "git push; git push --tags"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
