--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -39,8 +39,10 @@
     "mocha": "^6.2.2"
   },
   "scripts": {
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
-    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\""
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
+    "postpublish": "git push; git push --tags"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
