--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -62,6 +62,7 @@
     "ua-parser-js": "^0.7.20"
   },
   "scripts": {
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test:mocha": "mocha --no-timeouts \"test/**/*.test.js\"",
     "test:sanity": "mocha --no-timeouts 'test/!(browser||e2e)/**/*.test.js'",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.test.js\"",
@@ -70,7 +71,8 @@
     "build:browser": "cd test/fixtures/test-app && npm i && npm run build",
     "test:browser": "mocha --no-timeouts 'test/browser/**/*.test.js'",
     "test": "npm run build:browser && npm run test:mocha",
-    "render": "node example/render.js"
+    "render": "node example/render.js",
+    "postpublish": "git push; git push --tags"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
