--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -31,18 +31,18 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-common": "^3.17.2",
-    "@applitools/isomorphic-fetch": "^3.0.0",
-    "@applitools/sdk-fake-eyes-server": "^1.0.4",
-    "axios": "^0.19.1",
-    "chalk": "^3.0.0",
-    "es6-promise-pool": "^2.5.0",
+    "@applitools/eyes-common": "3.18.2",
+    "@applitools/isomorphic-fetch": "3.0.0",
+    "axios": "0.19.2",
+    "chalk": "3.0.0",
+    "es6-promise-pool": "2.5.0",
     "tunnel": "0.0.6"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-uuid": "^1.0.6",
-    "mocha": "^6.2.2"
+    "@applitools/sdk-fake-eyes-server": "1.0.4",
+    "chai": "4.2.0",
+    "chai-uuid": "1.0.6",
+    "mocha": "7.0.1"
   },
   "browser": {
     "tunnel": false
