--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -31,14 +31,13 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "@applitools/dom-snapshot": "^3.1.4",
-    "@applitools/eyes-common": "^3.17.2",
-    "@applitools/eyes-sdk-core": "6.0.0",
-    "@applitools/functional-commons": "^1.5.2",
-    "@applitools/http-commons": "^1.3.9",
-    "@applitools/isomorphic-fetch": "^3.0.0",
-    "@applitools/jsdom": "^1.0.1",
-    "he": "^1.2.0",
+    "@applitools/dom-snapshot": "3.2.3",
+    "@applitools/eyes-common": "3.18.2",
+    "@applitools/eyes-sdk-core": "6.0.7",
+    "@applitools/functional-commons": "1.5.4",
+    "@applitools/http-commons": "2.3.12",
+    "@applitools/isomorphic-fetch": "3.0.0",
+    "@applitools/jsdom": "1.0.2",
     "lodash.mapvalues": "^4.6.0",
     "mime-types": "^2.1.24",
     "mkdirp": "^0.5.1",
