--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -36,14 +36,13 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "^4.7.4",
-    "@applitools/eyes-common": "^3.17.2",
-    "@applitools/sdk-fake-eyes-server": "^1.0.3",
-    "@applitools/eyes-sdk-core": "^6.0.2",
-    "@applitools/visual-grid-client": "13.5.8"
+    "@applitools/dom-utils": "4.7.4",
+    "@applitools/eyes-common": "3.18.2",
+    "@applitools/eyes-sdk-core": "6.0.7",
+    "@applitools/visual-grid-client": "13.5.9"
   },
   "devDependencies": {
-    "@applitools/sdk-fake-eyes-server": "^1.0.4",
+    "@applitools/sdk-fake-eyes-server": "1.0.4",
     "@applitools/sdk-test-kit": "^1.0.14",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
