--- a/packages/dom-utils/package.json
+++ b/packages/dom-utils/package.json
@@ -31,7 +31,9 @@
   "devDependencies": {
     "chromedriver": "^80.0.0",
     "mocha": "^6.2.2",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1"
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
