--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -39,6 +39,7 @@
     "@applitools/dom-utils": "4.7.4",
     "@applitools/eyes-common": "3.18.2",
     "@applitools/eyes-sdk-core": "6.0.7",
+    "@applitools/sdk-universal": "1.0.0",
     "@applitools/visual-grid-client": "13.5.10"
   },
   "devDependencies": {
@@ -47,12 +48,12 @@
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chromedriver": "^78.0.0",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "chai-as-promised": "^7.1.1"
+    "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
