added wdio5 to the list of workspaces, updated the yarn.lock deps, and updated the readme to link to it

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "packages/sdk-fake-eyes-server",
     "packages/sdk-test-kit",
     "packages/visual-grid-client",
-    "packages/eyes-webdriverio-4"
+    "packages/eyes-webdriverio-4",
+    "packages/eyes-webdriverio-5"
   ],
   "scripts": {
     "lint": "eslint --ext .js .",
