--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "packages/sdk-test-kit",
     "packages/visual-grid-client",
     "packages/eyes-webdriverio-4",
-    "packages/eyes-webdriverio-5"
+    "packages/eyes-webdriverio-4-service",
+    "packages/eyes-webdriverio-5",
+    "packages/eyes-webdriverio-5-service"
   ],
   "scripts": {
     "lint": "eslint --ext .js .",
