--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-mocha-no-only": "^1.1.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2",
-    "js-yaml": "^3.13.1"
-  }
+    "js-yaml": "^3.13.1",
+    "prettier": "^1.18.2"
+  },
+  "version": "0.0.1"
 }
