--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -26,11 +26,11 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "^4.7.4",
-    "@applitools/eyes-common": "^3.18.1",
-    "@applitools/eyes-sdk-core": "^6.0.9",
-    "@applitools/functional-commons": "^1.5.4",
-    "@applitools/visual-grid-client": "^13.5.8",
+    "@applitools/dom-utils": "4.7.4",
+    "@applitools/eyes-common": "3.18.2",
+    "@applitools/eyes-sdk-core": "6.0.9",
+    "@applitools/functional-commons": "1.5.4",
+    "@applitools/visual-grid-client": "13.5.11",
     "rimraf": "^3.0.0"
   },
   "peerDependencies": {
@@ -94,7 +94,7 @@
     "testcafe-browser-provider-saucelabs": "^1.8.0",
     "ua-parser-js": "^0.7.20",
     "url-polyfill": "^1.1.7",
-    "whatwg-fetch": "^3.0.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
