--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -13,8 +13,8 @@
   "license": "SEE LICENSE IN LICENSE",
   "repository": "https://github.com/applitools/eyes.sdk.javascript1",
   "dependencies": {
-    "@applitools/dom-utils": "~4.6.37",
-    "@applitools/eyes-common": "^3.17.2",
+    "@applitools/dom-utils": "4.7.4",
+    "@applitools/eyes-common": "3.18.2",
     "@applitools/eyes-sdk-core": "6.0.9",
     "@applitools/visual-grid-client": "13.5.8",
     "css": "2.2.4",
@@ -25,11 +25,11 @@
   },
   "devDependencies": {
     "chromedriver": "^80.0.0",
+    "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "4.0.1",
     "mocha-parallel-tests": "^2.1.0",
-    "shared-examples-for": "^0.1.3",
-    "eslint": "^6.8.0"
+    "shared-examples-for": "^0.1.3"
   },
   "engines": {
     "node": ">=8.9.0"
