--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-selenium",
-  "version": "4.33.10",
+  "version": "4.33.11",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
@@ -47,12 +47,12 @@
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chromedriver": "^80.0.0",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "chai-as-promised": "^7.1.1"
+    "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
