--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -44,6 +44,7 @@
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
+    "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "postpublish": "git push; git push --tags"
   },
   "license": "SEE LICENSE IN LICENSE",
