--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint '**/*.js'",
     "test": "npm run test:unit && npm run test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
+    "test:it": "mocha --no-timeouts \"test/it/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\""
   },
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
