--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -7,7 +7,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "wdio test/wdio.conf.js"
+    "test": "wdio test/wdio.conf.js",
+    "postpublish": "git push; git push --tags"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
