--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint '**/*.js'",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "yarn test:unit && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
     "test:it": "mocha --no-timeouts \"test/it/*.js\"",
-    "test:unit": "mocha \"test/unit/**/*.js\""
+    "test:unit": "mocha \"test/unit/**/*.js\"",
+    "postpublish": "git push; git push --tags"
   },
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
   "license": "SEE LICENSE IN LICENSE",
