--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -62,7 +62,7 @@
     "test": "yarn test:unit && yarn test:it",
     "render": "node scripts/render.js",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
+    "test:it": "mocha --timeout 120000 \"test/it/**/*.spec.js\"",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
     "test:coverage": "coverage-tests run --path test/coverage/index.js --filterIndexes 0,1,2,6,7,8,9,10,11,16,17,18,27,28,29,30,31,32,33,34,35,36,37,39,40,41,42,44,45,46,47,48,49,60,61,75,76,78,79,80,85,86,87,88,89,90,91,92,93,94,95,97,98,99,100,101,102,103,104,105,106,107,109,110,112,113,114,115,116,118,119,121,122,124,125,127,128",
     "test:coverage:nuke": "coverage-tests nuke",
